Deployment/dev/k8sClusterDepAWSKOPS/helloNode/argocdHNInit.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: argocd
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /cd?(.*)
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
