Deployment/dev/k8sClusterDepAWSKOPS/helloNode/kubernetes-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: kubernetes-dashboard
  name: kubernetes-dashboard-service-expose
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Accept-Encoding "";
      sub_filter 'href="styles.' 'href="dashboard/styles.';
      sub_filter '<script src="' '<script src="dashboard/';
      sub_filter_once off;
    nginx.ingress.kubernetes.io/rewrite-target: /$2

# <link rel="stylesheet" href="styles.243e6d874431c8e8.css" media="print" onload="this.media='all'">
# <script src="runtime.4e6659debd894e59.js" type="module"></script>

spec:
  rules:
    - host: 'kd.hn.com'
      http:
        paths:
          - path: /dashboard(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 443
